# headhunter-tavern

./: .gitignore  AGENTS.md  README.md
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/api/: __init__.py  claims.py  company_clue.py  crawl.py  home.py
backend/app/cli/: __init__.py  audit_estimated_bounty.py  backfill_estimated_bounty.py  backfill_market_intelligence.py  daily_bounty.py  generate_living_market_report.py  (+2 more)
backend/tests/: conftest.py  test_abetterweb3_adapter.py  test_bounty_backfill_service.py  test_bounty_estimation.py  test_bounty_readiness_service.py  test_claim_service.py  test_claims_api.py  test_company_clue_context.py  test_company_clue_letter.py  test_company_clue_prompt.py  test_company_clue_validator.py  test_config.py  test_crawl_api.py  test_crawl_fetch_service.py  test_crawl_pipeline.py  test_crawl_trigger_service.py  test_daily_bounty_service.py  test_dejob_adapter.py  test_generate_living_market_report_cli.py  test_grouping.py  test_home_api.py  test_home_feed.py  test_home_feed_aggregation.py  test_home_feed_assembler.py  test_home_query_service.py  test_home_snapshot_read_service.py  test_intelligence.py  test_intelligence_context.py  test_jdtrust_assessment_read.py  test_jdtrust_sidecar_trigger.py  test_job_category_classifier.py  test_job_enrichment.py  test_job_facts.py  test_job_upsert_service.py  test_llm_client.py  test_main.py  test_market_intelligence_facts.py  test_market_intelligence_home_read.py  test_market_intelligence_living_payload.py  test_market_intelligence_living_refresh.py  (+11 more)
(+119 files in other folders)
